--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.fade-enter {
+  opacity: 0;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 800ms;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 800ms;
+}
+
+.leaflet-container {
+  width: 95%;
+  height: 70%;
+  margin: 10px;
+}
+.swal2-popup {
+  font-family: 'Roboto', Helvetica, sans-serif, serif;
+}
